tests/purs/failing/VisibleTypeApplications4.out
Error found:
at tests/purs/failing/VisibleTypeApplications4.purs:4:17 - 4:18 (line 4, column 17 - line 4, column 18)

  Unable to parse module:
  Unexpected token '@'


See https://github.com/purescript/documentation/blob/master/errors/ErrorParsingModule.md for more information,
or to contribute content related to this error.

